Verbesserung von Testklassen und anpassungen im Code